# hypermodern-python

./: .flake8  README.md  docstring_generator.mustache  noxfile.py  pyproject.toml
.github/workflows/: tests.yml
.pytype/: .ninja_log  build.ninja
.pytype/imports/: hypermodern_python.console.imports  hypermodern_python_cli99.console.imports  tests.test_console.imports  tests.test_wikipedia.imports
.pytype/pyi/tests/: test_console.pyi  test_wikipedia.pyi
docs/: conf.py  index.rst  requirements.txt
docs/_sources/: index.rst.txt  reference.rst.txt
src/hypermodern_python/: console.py  wikipedia.py
tests/: __init__.py  conftest.py  test_console.py  test_wikipedia.py
