[tool.poetry]
name = "hypermodern-python"
version = "0.1.0"
authors = ["Cheng Li"]
description = "The hypermodern Python project"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/cli99/hypermodern-python"
repository = "https://github.com/cli99/hypermodern-python"
keywords = ["hypermodern"]

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.1.2"
requests = "^2.24.0"
desert = "^2020.1.6"
marshmallow = "^3.7.1"

[tool.poetry.dev-dependencies]
pytest = "^6.0.1"
coverage = {version = "^5.2.1", extras = ["toml"]}
pytest-cov = "^2.10.1"
pytest-mock = "^3.2.0"
black = {version = "^19.10b0", allow-prereleases = true}
flake8 = "^3.8.3"
flake8-bandit = "^2.1.2"
flake8-black = "^0.2.1"
flake8-bugbear = "^20.1.4"
flake8-import-order = "^0.18.1"
safety = "^1.9.0"
mypy = "^0.782"
pytype = {version = "^2020.8.17", python = "3.7"}
typeguard = "^2.9.1"
flake8-annotations = "^2.3.0"
flake8-docstrings = "^1.5.0"
darglint = "^1.5.2"

[tool.poetry.scripts]
hypermodern-python = "hypermodern_python.console:main"

[tool.coverage.path]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["hypermodern_python"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
